changes made to bio/landing plus adding hobbies

--- a/Landing.html
+++ b/Landing.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <!-- might change title name -->
-        <title>Home - Whitney Davidson</title>
+        <title>Home - Whitney Breen</title>
 
         <!-- meta  -->
         <meta name="description" content="My first webpage">
@@ -19,10 +19,12 @@
     </head>
     
     <body>
-        <div class="container">
+        <div id="container">
             <div class="navbar">
                 <ul class="nav">
-                    <li><a href="#">Home</a></li>                                  
+                    <li><a href="bio.html" class="about">About</a></li>
+                    <li><a href="Landing.html" class="home">Home</a></li>
+                    <li><a href="hobbies.html" class="Hobbies">Hobbies</a></li>                                  
                 </ul>
             </div>    
         
@@ -42,8 +44,11 @@
             </div>
         </div>
         <footer>
+            <div class="top-div">
+                <a href="#container" class="top">Top of Page</a>
+            </div>
             <div class="web">
-                <a href="https://cornerstonecstx.com" class="site">Whitney's company website</a>
+                <a href="https://cornerstonecstx.com" target="_blank" class="site">Whitney's company website</a>
             </div>
         </footer>
     </body>
