--- a/hobbies.html
+++ b/hobbies.html
@@ -12,9 +12,9 @@
         <div id="container">
             <div class="navbar">
                 <ul class="nav">
-                    <li><a href="bio.html" class="about">About</a></li>
                     <li><a href="Landing.html" class="home">Home</a></li>
-                    <li><a href="hobbies.html" class="Hobbies">Hobbies</a></li>                                   
+                    <li><a href="bio.html" class="about">About</a></li>                    
+                    <li><a href="hobbies.html" class="hobbies">Hobbies</a></li>                                     
                 </ul>
             </div>
             <h1>Hobbies</h1>
@@ -27,16 +27,16 @@
                     <p>I conducted an interview with the subject involving a series of questions ranging from their day-to-day life, career accomplishments, endeavors, mission statement, and personal interests. I was able to gather helpful information throughout the interview itself, however, I needed more material to gain a better insight into some of the topics that were discussed. For example, the subject expressed her love for travel and highlighted South Africa, Cape Town and the country of Morocco. I then researched travel advisories, destinations, tourist attractions, room and board expenses, cultural differences, and general expectations when traveling to those locations. 
                     </p>
                     <figure>
-                        <img src="images/giraffe.jpg" class="giraffe">
+                        <img src="images/giraffe.jpg" alt="" class="giraffe">
                         <figcaption>A giraffe peering out of the trees</figcaption>
                     </figure>
                     </div>
 
                     <div class="section2">
-                    <p>Next I wanted to collect more information on her job description and the services that the business provides. I researched chimney sweeping services and specifically observed her website, taking note of the work that they offered. I was able to collect customer reviews and ratings of the company as well as awards the business received. I discussed with the subject how she got involved in chimney maintenance and how long its been up and running. 
+                    <p>Next, I wanted to collect more information on her job description and the services that the business provides. I researched chimney sweeping services and specifically observed her website, taking note of the work that they offered. I was able to collect customer reviews and ratings of the company as well as awards the business received. I discussed with the subject how she got involved in chimney maintenance and how long its been up and running. 
                     </p>
                     <figure>
-                        <img src="images/chimney.jpg" class="images">
+                        <img src="images/chimney.jpg" alt="" class="images">
                         <figcaption>A recently serviced chimney</figcaption>
                     </figure>
                     </div>
@@ -45,8 +45,8 @@
                     <p>One of last questions I asked in the interview was where she sees herself in five years. She mentioned she will be starting classes to acquire a real estate license in a month. She expressed her love for homes and interior design. In turn I inquired online about the role and tasks of a real-estate agent. I also explored information pertaining to interior design. Outside of the interview, she gave me a brief timeline overview to help me when writing out the bio.
                     </p>                    
                     <figure>
-                        <img src="images/house on the beach.jpg" class="images">
-                        <figcaption>A cyan house perched on the shoreline</figcaption>
+                        <img src="images/house on the beach.jpg" alt="" class="images">
+                        <figcaption>A quaint house perched on the shoreline</figcaption>
                     </figure>
                     </div>
                     
