--- a/Landing.html
+++ b/Landing.html
@@ -22,9 +22,9 @@
         <div id="container">
             <div class="navbar">
                 <ul class="nav">
-                    <li><a href="bio.html" class="about">About</a></li>
                     <li><a href="Landing.html" class="home">Home</a></li>
-                    <li><a href="hobbies.html" class="Hobbies">Hobbies</a></li>                                  
+                    <li><a href="bio.html" class="about">About</a></li>                    
+                    <li><a href="hobbies.html" class="hobbies">Hobbies</a></li>                                  
                 </ul>
             </div>    
         
@@ -32,15 +32,15 @@
             <div class="section1">
                 
                 <p>Figuring out what to do with one's life is one of the most difficult decisions a person can make. Fortunately for Whitney and her husband Bobby, they were able to build their own business, and they could not be happier with the life it provides for them.</p>
-                <img src="images/family.jpg" alt="" class="pic1" >
+                <img src="images/family.jpg" alt="Whitney and her husband, Bobby, enjoying the beach with their two dogs." class="pic1" >
             </div>
             <div class="section2">
-                <img src="images/capetown.jpg" alt="" class="pic2">
+                <img src="images/capetown.jpg" alt="A view of homes and businesses overlooking the shoreline of Cape Town, South Africa." class="pic2">
                 <p>Building and maintaining a business is no cakewalk, but the rewards it brings make it all the more worthwhile. Once a year, she makes it a point to travel to her favorite getaway destination in Cape Town, South Africa.</p>
             </div>
             <div class="section3">
                 <p>Establishing a successful business is an amazing accomplishment for Whitney, but she isn't stopping there. She is in pursuit of a new goal: obtaining her real-estate license. This way, she can combine her love of homes with the satisfaction she gets from serving those who wish to find a residence of their own.</p>
-                <img src="images/patio.jpg" alt="" class="pic3">
+                <img src="images/patio.jpg" alt="An elegantly decorated outdoor patio with tropical foliage." class="pic3">
             </div>
         </div>
         <footer>
@@ -48,7 +48,7 @@
                 <a href="#container" class="top">Top of Page</a>
             </div>
             <div class="web">
-                <a href="https://cornerstonecstx.com" target="_blank" class="site">Whitney's company website</a>
+                <a href="https://cornerstonecstx.com" target="_blank" alt="Opens a new tab taking the user to Whitney's company website" class="site">Whitney's company website</a>
             </div>
         </footer>
     </body>
